--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -27,7 +27,7 @@
         android:text="Questionnaire"
         android:textAlignment="center"
         android:textColor="@color/colorNeutralWhite"
-        android:textSize="36dp"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,12 +37,12 @@
         app:layout_constraintVertical_bias="0.077" />
 
     <LinearLayout
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="590dp"
         android:orientation="vertical"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="42dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,16 +63,15 @@
                     android:layout_height="wrap_content"
                     android:text="Are you experiencing any of the following symptoms?"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="26dp"
-                    android:textStyle="bold"
-                    />
+                    android:textSize="26sp"
+                    android:textStyle="bold"/>
 
                 <CheckBox
                     android:id="@+id/UrinationCheckBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Frequent urination"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -82,7 +81,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Excessive thirst"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -92,7 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Unexplained weight loss"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -102,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Extreme hunger"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -112,7 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Sudden vision changes"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -122,7 +121,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="  Tingling or numbness in hands or feet"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/colorNeutralWhite"
                     app:buttonTint="@color/colorNeutralPaleGray"/>
@@ -133,30 +132,34 @@
                     android:id="@+id/SympNotesView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:text="Any other symptoms"
                     android:textAlignment="center"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
 
                 <EditText
                     android:id="@+id/TypeSympNotes"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:background="@drawable/textbox"
                     android:backgroundTint="@color/colorNeutralWhite"
-                    android:inputType="text"
-                    android:paddingStart="10dp"
-                    android:paddingTop="1dp"
-                    android:paddingBottom="40dp"
-                    android:textColor="#000000"
-                    android:textColorHighlight="#000000"
-                    android:textColorHint="#000000"
-                    app:layout_constraintTop_toBottomOf="@+id/SympNotesView"
+                    android:inputType="textMultiLine"
+                    android:lines="6"
+                    android:minLines="4"
+                    android:gravity="top|start"
+                    android:maxLines="10"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical"
+                    android:padding="15dp"
+                    android:textColor="@color/colorTextBlack"
+                    android:textColorHighlight="@color/colorTextBlack"
+                    android:textColorHint="@color/colorTextBlack"
+                    android:layout_gravity="center_horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/SympNotesView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -165,12 +168,12 @@
                     android:id="@+id/DateTimeView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:text="Date and Time"
                     android:textAlignment="center"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="26dp"
+                    android:textSize="26sp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/TypeSympNotes" />
 
@@ -183,13 +186,13 @@
                     android:backgroundTint="@color/colorNeutralWhite"
                     android:hint="Date"
                     android:padding="15dp"
-                    android:textColor="#000000"
-                    android:textColorHighlight="#000000"
-                    android:textColorHint="#000000"
+                    android:textColor="@color/colorTextBlack"
+                    android:textColorHighlight="@color/colorTextBlack"
+                    android:textColorHint="@color/colorTextBlack"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/DateTimeView" />
+                    app:layout_constraintTop_toBottomOf="@id/DateTimeView" />
 
                 <TextView
                     android:id="@+id/timePick"
@@ -200,13 +203,13 @@
                     android:backgroundTint="@color/colorNeutralWhite"
                     android:hint="Time"
                     android:padding="15dp"
-                    android:textColor="#000000"
-                    android:textColorHighlight="#000000"
-                    android:textColorHint="#000000"
+                    android:textColor="@color/colorTextBlack"
+                    android:textColorHighlight="@color/colorTextBlack"
+                    android:textColorHint="@color/colorTextBlack"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/datePick" />
+                    app:layout_constraintTop_toBottomOf="@id/datePick" />
 
                 <Button
                     android:id="@+id/SaveBtn"
@@ -215,13 +218,12 @@
                     android:background="@drawable/roundbutton"
                     android:backgroundTint="#2DE160"
                     android:text="Save"
-                    android:textSize="20dp"
+                    android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker"
-                    android:layout_marginStart="90dp"
-                    android:layout_marginEnd="90dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp" />
 
                 <Button
@@ -229,20 +231,17 @@
                     android:layout_width="180dp"
                     android:layout_height="50dp"
                     android:background="@drawable/roundbutton"
-                    android:backgroundTint="#782121"
+                    android:backgroundTint="#FF0909"
                     android:text="Cancel"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorTextBlack"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/SaveBtn"
-                    android:layout_marginStart="90dp"
-                    android:layout_marginEnd="90dp"
-                    android:layout_marginTop="20dp"/>
-
-
-
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"/>
 
             </LinearLayout>
         </ScrollView>
