changed all the dp text sizes to sp

--- a/app/src/main/res/layout/foodlog.xml
+++ b/app/src/main/res/layout/foodlog.xml
@@ -237,7 +237,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Cancel"
-        android:textSize="15dp"
+        android:textSize="16sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -258,7 +258,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Save"
-        android:textSize="15dp"
+        android:textSize="16sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
