--- a/app/src/main/res/layout/history_search.xml
+++ b/app/src/main/res/layout/history_search.xml
@@ -79,7 +79,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Search"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/historyRecycler"
@@ -110,7 +110,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
