--- a/app/src/main/res/layout/log_menu.xml
+++ b/app/src/main/res/layout/log_menu.xml
@@ -48,7 +48,7 @@
         android:bottomRightRadius="10dp"
         android:text="Blood Sugar"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:bottomRightRadius="10dp"
         android:text="Food"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:bottomRightRadius="10dp"
         android:text="Medication"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
         android:bottomRightRadius="10dp"
         android:text="Exercise"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:bottomRightRadius="10dp"
         android:text="Extra Notes"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
         android:bottomRightRadius="10dp"
         android:text="Questionnaire"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -167,7 +167,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
