--- a/app/src/main/res/layout/medication_log.xml
+++ b/app/src/main/res/layout/medication_log.xml
@@ -129,7 +129,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Cancel"
-        android:textSize="15dp"
+        android:textSize="16sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -149,7 +149,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Save"
-        android:textSize="15dp"
+        android:textSize="16sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
