--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:text="First Name"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/FirstNameEdit"
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:text="Last Name"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/LastNameEdit"
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:text="Email Address"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/EmailEdit"
@@ -135,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:text="Type of Diabetes"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/TypeDiaEdit"
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:text="Type of Insulin"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/TypeInsEdit"
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:text="Insulin Administration"
                     android:textColor="@color/colorNeutralWhite"
-                    android:textSize="22dp" />
+                    android:textSize="22sp" />
 
                 <EditText
                     android:id="@+id/InsAdmEdit"
@@ -199,10 +199,6 @@
                     android:textColor="#000000"
                     android:textColorHighlight="#000000"
                     android:textColorHint="#000000" />
-
-
-
-
 
                 <Space
                     android:layout_width="match_parent"
@@ -218,7 +214,7 @@
                     android:bottomRightRadius="10dp"
                     android:text="Save Changes"
                     android:textAllCaps="false"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:topLeftRadius="10dp"
                     android:topRightRadius="10dp"
                     android:layout_marginStart="81dp"
@@ -238,7 +234,7 @@
                     android:bottomRightRadius="10dp"
                     android:text="Cancel"
                     android:textAllCaps="false"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:topLeftRadius="10dp"
                     android:topRightRadius="10dp"
                     android:layout_marginStart="81dp"
