--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -48,7 +48,7 @@
         android:bottomRightRadius="10dp"
         android:text="Profile Details"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:bottomRightRadius="10dp"
         android:text="Doctor Details"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:bottomRightRadius="10dp"
         android:text="Delete Account"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
         android:bottomRightRadius="10dp"
         android:text="Log Out"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,15 +127,14 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/colorNeutralWhite"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/LogOutBtn"
-        />
+        app:layout_constraintTop_toBottomOf="@id/LogOutBtn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
