--- a/app/src/main/res/layout/signup1.xml
+++ b/app/src/main/res/layout/signup1.xml
@@ -151,7 +151,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Continue"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -172,7 +172,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
