--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -148,8 +148,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp" />
+            android:layout_gravity="center_horizontal" />
 
         <Button
             android:id="@+id/saveBtn"
