--- a/app/src/main/res/layout/log_menu.xml
+++ b/app/src/main/res/layout/log_menu.xml
@@ -39,141 +39,113 @@
     <Button
         android:id="@+id/BloodSugarLogBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="144dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Blood Sugar"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/FoodLogBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/LogoView" />
 
     <Button
         android:id="@+id/FoodLogBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="224dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Food"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/MedicationLogBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/BloodSugarLogBtn" />
 
     <Button
         android:id="@+id/MedicationLogBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="304dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Medication"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/ExerciseLogBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/FoodLogBtn" />
 
     <Button
         android:id="@+id/ExerciseLogBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="384dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Exercise"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/ExtraNotesLogBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/MedicationLogBtn" />
 
     <Button
         android:id="@+id/ExtraNotesLogBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="464dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Extra Notes"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/QuestionnaireBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ExerciseLogBtn" />
 
     <Button
         android:id="@+id/QuestionnaireBtn"
         android:layout_width="270dp"
-        android:layout_height="57dp"
+        android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="544dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Questionnaire"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ExtraNotesLogBtn" />
 
     <Button
         android:id="@+id/BacktoMainBtn"
         android:layout_width="160dp"
-        android:layout_height="57dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="630dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralPaleGray"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
