--- a/app/src/main/res/drawable/roundbutton.xml
+++ b/app/src/main/res/drawable/roundbutton.xml
@@ -3,20 +3,20 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="80dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
+            <stroke android:width="1dip" android:color="#5E7974" />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="80dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <solid android:color="#58857e"/>
+            <stroke android:width="1dip" android:color="#5E7974" />
+            <solid android:color="#58857E"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="80dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
+            <stroke android:width="1dip" android:color="#005E7974" />
         </shape>
     </item>
 </selector>
