--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -68,14 +68,13 @@
             android:id="@+id/SugarField"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
-            android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Blood Sugar (mmol/L)"
+            android:background="@drawable/roundtext"
+            android:hint="Enter blood sugar"
             android:inputType="textPersonName"
             android:padding="15dp"
+            android:backgroundTint="@color/colorNeutralWhite"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/SugarView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -100,14 +99,13 @@
             android:id="@+id/datePick"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
-            android:backgroundTint="@color/colorNeutralWhite"
+            android:background="@drawable/roundtext"
             android:hint="Date"
             android:padding="15dp"
             android:textAlignment="center"
+            android:backgroundTint="@color/colorNeutralWhite"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/DateTimeView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -118,19 +116,18 @@
             android:id="@+id/timePick"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
-            android:backgroundTint="@color/colorNeutralWhite"
+            android:background="@drawable/roundtext"
             android:hint="Time"
             android:padding="15dp"
             android:textAlignment="center"
+            android:backgroundTint="@color/colorNeutralWhite"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/datePick"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="28dp" />
+            android:layout_marginTop="24dp" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/hourSwitch"
@@ -155,32 +152,32 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#2DE160"
+            android:backgroundTint="@color/save"
             android:text="Save"
             android:textSize="16sp"
+            android:textColor="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/hourSwitch"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="36dp" />
 
         <Button
             android:id="@+id/cancelBtn"
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#FF0909"
             android:text="Cancel"
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorTextBlack"
+            android:textColor="@color/save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/saveBtn"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="20dp" />
 
     </LinearLayout>
 
