modified general ui

--- a/app/src/main/res/layout/doctor_details.xml
+++ b/app/src/main/res/layout/doctor_details.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="Name of Doctor"
             android:textColor="@color/colorNeutralWhite"
-            android:textSize="22sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,14 +66,13 @@
             android:id="@+id/DocNameEdit"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint=" Current Name of Doctor"
             android:inputType="textPersonName"
             android:padding="15dp"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/DocNameView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -86,7 +85,7 @@
             android:layout_height="wrap_content"
             android:text="Phone Number of Doctor"
             android:textColor="@color/colorNeutralWhite"
-            android:textSize="22sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,14 +96,13 @@
             android:id="@+id/DocPhoneNumEdit"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint=" Current Phone Number of Doctor"
             android:inputType="textPersonName"
             android:padding="15dp"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/DocPhoneNumView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -117,7 +115,7 @@
             android:layout_height="wrap_content"
             android:text="Email Address of Doctor"
             android:textColor="@color/colorNeutralWhite"
-            android:textSize="22sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,14 +126,13 @@
             android:id="@+id/DocEmailEdit"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint=" Current Email Address of Doctor"
             android:inputType="textEmailAddress"
             android:padding="15dp"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintTop_toBottomOf="@id/DocEmailView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -147,7 +144,8 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#2DE160"
+            android:backgroundTint="@color/save"
+            android:textColor="@color/colorPrimary"
             android:text="Save Changes"
             android:textAllCaps="false"
             android:textSize="18sp"
@@ -163,8 +161,8 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#FF0909"
             android:text="Cancel"
+            android:textColor="@color/save"
             android:textAllCaps="false"
             android:textSize="18sp"
             android:layout_gravity="center_horizontal"
@@ -172,7 +170,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/SaveBtn"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp" />
 
     </LinearLayout>
