--- a/app/src/main/res/layout/exercise_log.xml
+++ b/app/src/main/res/layout/exercise_log.xml
@@ -71,14 +71,13 @@
             android:id="@+id/TypeField"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Type of exercise"
+            android:hint="Enter exercise"
             android:inputType="text"
             android:padding="15dp"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,14 +104,13 @@
             android:id="@+id/DurationField"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Duration"
+            android:hint="Enter duration"
             android:inputType="text"
             android:padding="15dp"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,14 +136,13 @@
             android:id="@+id/datePick"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Date"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -156,14 +153,13 @@
             android:id="@+id/timePick"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Time"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -175,9 +171,10 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#2DE160"
+            android:backgroundTint="@color/save"
             android:text="Save"
             android:textSize="16sp"
+            android:textColor="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -190,16 +187,16 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#FF0909"
             android:text="Cancel"
             android:textSize="16sp"
+            android:textColor="@color/save"
             android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/saveBtn"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="20dp" />
 
     </LinearLayout>
 
