--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -40,62 +40,52 @@
         android:id="@+id/TypeDiaSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
         android:layout_centerHorizontal="true"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/roundtext"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.017"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:textSize="18sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+        app:layout_constraintVertical_bias="0.017" />
 
     <EditText
         android:id="@+id/instype"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Type of Insulin"
         android:inputType="text"
         android:padding="15dp"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         android:textSize="16sp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TypeDiaSpinner"
-        app:layout_constraintVertical_bias="0.014"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.014" />
 
     <Spinner
         android:id="@+id/InsAdmSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:textSize="18sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        android:background="@drawable/roundtext"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instype"
+        app:layout_constraintTop_toBottomOf="@id/instype"
         app:layout_constraintVertical_bias="0.027" />
 
     <EditText
@@ -103,44 +93,40 @@
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Email of Doctor"
         android:inputType="textEmailAddress"
         android:padding="15dp"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         android:textSize="16sp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InsAdmSpinner"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/InsAdmSpinner"
+        app:layout_constraintVertical_bias="0.056" />
 
     <EditText
         android:id="@+id/docphone"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Phone Number of Doctor"
         android:inputType="phone"
         android:padding="15dp"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         android:textSize="16sp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/docemail"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/docemail"
+        app:layout_constraintVertical_bias="0.056" />
 
 
     <EditText
@@ -148,59 +134,50 @@
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Name of Doctor"
         android:inputType="textPersonName"
         android:padding="15dp"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         android:textSize="16sp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/docphone"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/docphone"
+        app:layout_constraintVertical_bias="0.056" />
 
     <Button
         android:id="@+id/continueBtn"
         android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#2DE160"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:backgroundTint="@color/save"
         android:text="Continue"
+        android:textColor="@color/colorPrimary"
         android:textSize="15sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/backBtn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.891" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="32dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#FF0909"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="Back"
+        android:textColor="@color/colorNeutralWhite"
         android:textSize="15sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintEnd_toStartOf="@id/continueBtn"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.891" />
