--- a/app/src/main/res/layout/bs_recycler.xml
+++ b/app/src/main/res/layout/bs_recycler.xml
@@ -28,7 +28,7 @@
                 android:text="Date and Time: "
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
 
             <TextView
@@ -38,7 +38,7 @@
                 android:text="TIME"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
@@ -53,7 +53,7 @@
                 android:text="Blood Sugar: "
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
 
             <TextView
@@ -63,7 +63,7 @@
                 android:text="Value"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
@@ -79,7 +79,7 @@
                 android:text="Eaten the last 2h: "
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
 
             <TextView
@@ -89,7 +89,7 @@
                 android:text="Boolean"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralBlack"
+                android:textColor="@color/colorTextBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
