--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -55,8 +55,9 @@
             android:id="@+id/extraNotes"
             android:layout_width="match_parent"
             android:layout_marginTop="4dp"
-            android:background="@drawable/largetextbox"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Enter notes"
             android:inputType="textMultiLine"
             android:lines="6"
             android:minLines="6"
@@ -67,8 +68,7 @@
             android:padding="15dp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -93,14 +93,13 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Date"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,14 +109,13 @@
             android:id="@+id/timePick"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Time"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
-            android:textColorHighlight="@color/colorTextBlack"
-            android:textColorHint="@color/colorTextBlack"
+            android:textColorHint="@color/colorNeutralDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +127,8 @@
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#2DE160"
+            android:backgroundTint="@color/save"
+            android:textColor="@color/colorPrimary"
             android:text="Save"
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
@@ -137,24 +136,23 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timePick"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="40dp" />
 
         <Button
             android:id="@+id/cancelBtn"
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="#FF0909"
             android:text="Cancel"
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorTextBlack"
+            android:textColor="@color/save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/saveBtn"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp" />
 
     </LinearLayout>
