--- a/app/src/main/res/layout/log_menu.xml
+++ b/app/src/main/res/layout/log_menu.xml
@@ -139,9 +139,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="Back"
         android:textSize="16sp"
+        android:textColor="@color/colorNeutralWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
