--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -36,58 +36,84 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
+    <TextView
+        android:id="@+id/EmailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textStyle="bold"
+        android:textColor="@color/colorNeutralWhite"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/Email"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/Email"
+        android:layout_marginBottom="2dp" />
+
     <EditText
         android:id="@+id/Email"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="88dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint=" Εmail"
+        android:hint=" Enter your email address"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/PasswordView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:textStyle="bold"
+        android:textColor="@color/colorNeutralWhite"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/password"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/password"
+        android:layout_marginBottom="2dp" />
+
     <EditText
         android:id="@+id/password"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Password"
+        android:hint="Enter password"
         android:inputType="textPassword"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Email"
-        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintVertical_bias="0.09"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/ForgotPWBtn"
-        android:layout_width="270dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="76dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:gravity="center"
         android:text="Forgot password?"
         android:textAllCaps="false"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="@color/colorNeutralWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,16 +121,16 @@
 
     <Button
         android:id="@+id/CreateAccBtn"
-        android:layout_width="270dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:gravity="center"
         android:text="Create account"
         android:textAllCaps="false"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="@color/colorNeutralWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,12 +143,9 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Login"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
