--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -145,9 +145,10 @@
                     android:id="@+id/TypeSympNotes"
                     android:layout_width="match_parent"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/textbox"
+                    android:background="@drawable/roundtext"
                     android:backgroundTint="@color/colorNeutralWhite"
                     android:inputType="textMultiLine"
+                    android:hint="Enter other symptoms"
                     android:lines="6"
                     android:minLines="4"
                     android:gravity="top|start"
@@ -156,8 +157,7 @@
                     android:scrollbars="vertical"
                     android:padding="15dp"
                     android:textColor="@color/colorTextBlack"
-                    android:textColorHighlight="@color/colorTextBlack"
-                    android:textColorHint="@color/colorTextBlack"
+                    android:textColorHint="@color/colorNeutralDarkGray"
                     android:layout_gravity="center_horizontal"
                     app:layout_constraintTop_toBottomOf="@id/SympNotesView"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -182,13 +182,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/roundbutton"
+                    android:background="@drawable/roundtext"
                     android:backgroundTint="@color/colorNeutralWhite"
-                    android:hint="Date"
+                    android:hint="Select Date"
+                    android:textAlignment="center"
                     android:padding="15dp"
                     android:textColor="@color/colorTextBlack"
-                    android:textColorHighlight="@color/colorTextBlack"
-                    android:textColorHint="@color/colorTextBlack"
+                    android:textColorHint="@color/colorNeutralDarkGray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -199,13 +199,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/roundbutton"
+                    android:background="@drawable/roundtext"
                     android:backgroundTint="@color/colorNeutralWhite"
-                    android:hint="Time"
+                    android:hint="Select Time"
                     android:padding="15dp"
+                    android:textAlignment="center"
                     android:textColor="@color/colorTextBlack"
-                    android:textColorHighlight="@color/colorTextBlack"
-                    android:textColorHint="@color/colorTextBlack"
+                    android:textColorHint="@color/colorNeutralDarkGray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -216,32 +216,32 @@
                     android:layout_width="180dp"
                     android:layout_height="50dp"
                     android:background="@drawable/roundbutton"
-                    android:backgroundTint="#2DE160"
-                    android:text="Save"
+                    android:backgroundTint="@color/save"
+                    android:text="SAVE"
                     android:textSize="16sp"
+                    android:textColor="@color/colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="30dp" />
 
                 <Button
                     android:id="@+id/CancelBtn"
                     android:layout_width="180dp"
                     android:layout_height="50dp"
                     android:background="@drawable/roundbutton"
-                    android:backgroundTint="#FF0909"
                     android:text="Cancel"
                     android:textSize="16sp"
-                    android:textColor="@color/colorTextBlack"
+                    android:textColor="@color/save"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/SaveBtn"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"/>
+                    android:layout_marginBottom="30dp"/>
 
             </LinearLayout>
         </ScrollView>
