--- a/app/src/main/res/layout/signup1.xml
+++ b/app/src/main/res/layout/signup1.xml
@@ -41,142 +41,125 @@
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="First Name"
         android:inputType="textPersonName"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.017"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.017" />
 
     <EditText
         android:id="@+id/LastNameField"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Last Name"
         android:inputType="textPersonName"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FirstNameField"
-        app:layout_constraintVertical_bias="0.017"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.017" />
 
     <EditText
         android:id="@+id/PasswordField"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LastNameField"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/LastNameField"
+        app:layout_constraintVertical_bias="0.056" />
 
     <EditText
         android:id="@+id/EmailField"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
+        app:layout_constraintBottom_toTopOf="@id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PasswordField"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.056" />
 
     <EditText
         android:id="@+id/nhsNumField"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundtext"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="NHS Number"
         android:inputType="phone"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHint="@color/colorNeutralDarkGray"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailField"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.056" />
 
     <Button
         android:id="@+id/continueBtn"
         android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#2DE160"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:backgroundTint="@color/save"
         android:text="Continue"
+        android:textColor="@color/colorPrimary"
         android:textSize="15sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/backBtn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.891" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="32dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#FF0909"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="Back"
+        android:textColor="@color/colorNeutralWhite"
         android:textSize="15sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintEnd_toStartOf="@id/continueBtn"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.891" />
