modified general ui

--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -100,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundtext"
-            android:hint="Date"
+            android:hint="Select Date"
             android:padding="15dp"
             android:textAlignment="center"
             android:backgroundTint="@color/colorNeutralWhite"
@@ -117,7 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundtext"
-            android:hint="Time"
+            android:hint="Select Time"
             android:padding="15dp"
             android:textAlignment="center"
             android:backgroundTint="@color/colorNeutralWhite"
