--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -95,7 +95,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Date"
+            android:hint="Select Date"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
@@ -111,7 +111,7 @@
             android:layout_height="50dp"
             android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Time"
+            android:hint="Select Time"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
