--- a/app/src/main/res/layout/medication_log.xml
+++ b/app/src/main/res/layout/medication_log.xml
@@ -114,7 +114,7 @@
             android:layout_height="50dp"
             android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Date"
+            android:hint="Select Date"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
@@ -127,7 +127,7 @@
             android:layout_height="50dp"
             android:background="@drawable/roundtext"
             android:backgroundTint="@color/colorNeutralWhite"
-            android:hint="Time"
+            android:hint="Select Time"
             android:padding="15dp"
             android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
